add modal, add piexel-perfect

--- a/src/blocks/menu/menu.pug
+++ b/src/blocks/menu/menu.pug
@@ -1,7 +1,7 @@
 mixin menu(modifier)
   .menu
     h2.menu__title Личный кабинет
-    button(type='button').menu__btn Вход в Личный кабинет
+    button(type='button').menu__btn.modal-open-btn Вход в Личный кабинет
     h2.menu__title Как это работает
     ul.menu__list 
         li.menu__item 
