--- a/src/blocks/possibilities/possibilities.pug
+++ b/src/blocks/possibilities/possibilities.pug
@@ -4,12 +4,12 @@ mixin possibilities(modifier)
         h2.possibilities__title Здесь можно оплатить
         ul.possibilities__list 
             li.possibilities__item 
-                a(href='#').possibilities__link Штрафы ГИБДД
+                a(href='#fines').possibilities__link Штрафы ГИБДД
             li.possibilities__item 
-                a(href='#').possibilities__link Судебные задолженности
+                a(href='#arreas').possibilities__link Судебные задолженности
             li.possibilities__item 
-                a(href='#').possibilities__link Налоги
+                a(href='#taxes').possibilities__link Налоги
             li.possibilities__item 
-                a(href='#').possibilities__link Услуги Росреестра
+                a(href='#services').possibilities__link Услуги Росреестра
             li.possibilities__item 
                 span.possibilities__another и другие услуги
