--- a/src/blocks/search/search.pug
+++ b/src/blocks/search/search.pug
@@ -1,6 +1,7 @@
 mixin search(modifier)
   .search 
     .container.search__container
+      h1.search__hidden-title Сайт оплаты штрафов, задолженностей и налогов
       h2.search__title Поиск начислений
       form(method='post' action='#').search__form
           input(type='text' required placeholder='Введите данные для поиска').search__input
