--- a/src/templates/blocks.pug
+++ b/src/templates/blocks.pug
@@ -6,3 +6,4 @@ include ../blocks/partners/partners.pug
 include ../blocks/footer/footer.pug
 include ../blocks/menu/menu.pug
 include ../blocks/support/support.pug
+include ../blocks/modal/modal.pug
