--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 24px;
+    padding: 10px 24px 8px;
     background-color: white;
     width: 100%;
     z-index: 10;
