--- a/src/blocks/options/options.pug
+++ b/src/blocks/options/options.pug
@@ -3,7 +3,7 @@ mixin options(modifier)
     .container.options__container
       h2.options__main-title Узнайте, как оплатить
       ul.options__list 
-        li.options__item
+        li.options__item#fines
           .options__text    
               h2.options__item-title Штрафы ГИБДД
               .options__wrapper
@@ -11,7 +11,7 @@ mixin options(modifier)
                 p.options__description Если у вас есть на руках постановление о штрафе, вы можете указать реквизиты самостоятельно.
                 p.options__description.options__description--bonus <b class='options__red-title'>Платить вовремя - дешевле!</b> В первые 20 дней после выдачи постановления штраф можно оплатить со скидкой 50%. Для своевременной оплаты штрафов настройте уведомления в Личном кабинете.
           img(src='./img/options-photo-1.png' width='320' height='320' alt='Фото сотрудника ГАИ').options__photo
-        li.options__item
+        li.options__item#arreas
           .options__text    
               h2.options__item-title.options__item-title--arreas Судебные задолженности
               .options__wrapper
@@ -19,14 +19,14 @@ mixin options(modifier)
                 p.options__description Вы можете указать реквизиты платежа самостоятельно, заполнив форму.
                 p.options__description.options__description--bonus <b class='options__red-title'>Удобно!</b> Судебные задолженности можно погасить как сразу, так и по частям, комфортными для вас платежами. Информацию о совершенных платежах сохраняйте в Личном кабинете.
           img(src='./img/options-photo-2.png' width='320' height='320' alt='Фото сотрудника ГАИ').options__photo
-        li.options__item
+        li.options__item#taxes
           .options__text    
               h2.options__item-title.options__item-title--taxes Налоги
               .options__wrapper
                 p.options__description Для поиска начислений по налогам в ГИС ГМП укажите ИНН или Индекс налогового документа, если у вас на руках есть квитанция.
                 p.options__description.options__description--bonus <b class='options__red-title'>Важно!</b> Согласно законодательству РФ вы не можете оплачивать налоги за других физических лиц. Принимаются только платежи физических лиц.
           img(src='./img/options-photo-3.png' width='320' height='320' alt='Фото сотрудника ГАИ').options__photo
-        li.options__item
+        li.options__item#services
           .options__text    
               h2.options__item-title.options__item-title--services Услуги Росреестра
               .options__wrapper
