--- a/src/blocks/options/options.scss
+++ b/src/blocks/options/options.scss
@@ -1,9 +1,5 @@
 .options {
 
-    &__container {
-        padding-bottom: 60px;
-    }
-
     &__main-title {
         display: none;
     }
@@ -69,7 +65,7 @@
         color: $mainText;
 
         &--bonus {
-            margin-top: 25px;
+            margin-top: 35px;
         }
     }
 
@@ -103,7 +99,7 @@
         }
 
         &__item {
-            padding: 17px 0;
+            padding: 16px 0;
             flex-direction: column;
     
             & .options__text {
@@ -163,7 +159,7 @@
                 background-repeat: no-repeat;
                 background-size: contain;
                 background-position: center;
-                transition: transform .3s;
+                transition: transform .5s;
             }
 
             &.active:after {
@@ -183,7 +179,7 @@
             }
 
             &.active {
-                margin-bottom: 12px;
+                margin-bottom: 27px;
             }
         }
 
@@ -200,6 +196,12 @@
 
         &__photo {
             display: none;
+        }
+
+        &__description {
+            &--bonus {
+                margin-top: 22px;
+            }
         }
     }
 }
