--- a/src/blocks/possibilities/possibilities.scss
+++ b/src/blocks/possibilities/possibilities.scss
@@ -2,7 +2,7 @@
 
     &__container {
         padding-top: 60px;
-        padding-bottom: 60px;
+        padding-bottom: 12px;
     }
 
     &__title {
@@ -19,14 +19,15 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        max-width: 600px;
+        align-items: center;
+        max-width: 563px;
         margin: 0 auto;
     }
 
     &__item {
         flex-grow: 1;
         text-align: center;
-        margin-bottom: 20px;
+        margin-bottom: 8px;
     }
 
     &__link {
