--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -31,6 +31,7 @@ $secondText: #ffffff;
 
 html {
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 body {
   margin: 0;
@@ -72,3 +73,4 @@ ul,li {
 @import './src/blocks/footer/footer';
 @import './src/blocks/menu/menu';
 @import './src/blocks/support/support';
+@import './src/blocks/modal/modal';
